[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "1", features = ["session","static-files"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "0.2"
tracing = "0.1"
mongodb = { version = "2" }
bson = { version = "*", features = ["chrono-0_4"] }
futures = "0.3"
chrono = { features = ["serde"], version = "0.4" }
markdown = "0.3"
tera = { version = "1" }
lazy_static = {version = "*"}
reqwest = {version = "*", features = ["json"]}